<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="send_data_format" Id="{ec61d28d-479c-4d46-b0cb-ec0256ad4fd7}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '0'}
TYPE send_data_format :
STRUCT
	command		: STRING(4);
	seq_number	: UINT;
	value		: ULINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>